language/move-lang/tests/move_check/parser/use_inner_scope_invalid_inner.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/use_inner_scope_invalid_inner.move:4:19
  │
4 │         if (cond) use 0x2::M;
  │                   ^^^
  │                   │
  │                   Unexpected 'use'
  │                   Expected an expression term

