language/move-lang/tests/move_check/parser/use_inner_scope_invalid_inner.move
address 0x2 {
module M {
    fun t() {
        if (cond) use 0x2::M;
    }
}
